--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -54,4 +54,5 @@
     <string name="temp_maturitas_week1_profs">1. maturitní týden - profesoři</string>
     <string name="temp_maturitas_week2_classes">2. maturitní týden - třídy</string>
     <string name="temp_maturitas_week2_profs">2. maturitní týden - profesoři</string>
+    <string name="temp_week_june">Týden 17. ‒ 21. června 2019</string>
 </resources>
