--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,6 @@
     <string name="temp_maturitas_week1_profs">1st final exam week - professors</string>
     <string name="temp_maturitas_week2_classes">2nd final exam week - classes</string>
     <string name="temp_maturitas_week2_profs">2nd final exam week - professors</string>
+
+    <string name="temp_week_june">17th ‒ 21th June 2019</string>
 </resources>
